# resoneut-g4

./: .gitignore  README.md  g4_00.wrl  output.txt  rootlogon.C
analysis/: counter.C  eff.py  eff_plot.C  eff_triple.csv  g4_00.wrl  g4_01.wrl  g4_03.wrl  neff-v1-t50.csv  neff.csv  neff.py  neff_En_300keV_thick.csv  neff_En_300keV_thin.csv  neff_thres_100keV.csv  neff_thres_200keV.csv  neff_thres_20keV.csv  neff_thres_50keV.csv  neff_thres_70keV_p0range.csv  neff_thres_75keV.csv  plotter.C  test.pvsm  test.root  test_t0.root  test_t1.root  vis-test.root
assets/: be11_input.json  elastic.txt  input.json  input_eff.json  input_eff_original.json  nuclear_masses.json  nuclear_states.json  original_nuclear_states.json  run.mac  state2.txt
efficiency/: .gitignore  CMakeLists.txt
efficiency/src/: Action.cc  Action.hh  BinaryReactionPhysics.hh  DetectorConstruction.cc  DetectorConstruction.hh  GenericSD.cc  GenericSD.hh  InputReader.cc  InputReader.hh  MassLookup.hh  NucleonStates.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  TrackingInformation.hh  main.cc
generic-det/: CMakeLists.txt
generic-det/src/: Action.cc  Action.hh  BinaryReactionProcess.cc  DetectorConstruction.cc  DetectorConstruction.hh  GenericSD.cc  GenericSD.hh  NucleonStates.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  ScintSD.hh  TrackingAction.cc  TrackingAction.hh  TrackingInformation.cc  kinematics.hh  main.cc
kinematics-det/: CMakeLists.txt
kinematics-det/src/: Action.cc  Action.hh  BinaryReactionPhysics.cc  BinaryReactionProcess.cc  BinaryReactionProcess.hh  DetectorConstruction.cc  DetectorConstruction.hh  GenericSD.cc  GenericSD.hh  InputReader.cc  InputReader.hh  MassLookup.cc  NucleonStates.cc  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  ScintSD.cc  TrackingInformation.cc  TrackingInformation.hh  TypeDef.hh  kinematics.cc  main.cc  mass_lookup.cc
macros/: PostProcess.C  beam-save-vis.mac  beam.mac  run1.mac  test.mac  vis.mac
single-det/: CMakeLists.txt
single-det/src/: Action.cc  Action.hh  BinaryReactionPhysics.hh  BinaryReactionProcess.cc  BinaryReactionProcess.hh  DetectorConstruction.cc  DetectorConstruction.hh  NucleonStates.cc  NucleonStates.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  ScintHit._cc  ScintHit._hh  ScintSD.cc  TrackingAction.cc  TrackingAction.hh  TrackingInformation.cc  TrackingInformation.hh  kinemtatics.cc  kinemtatics.hh  main.cc  mass_lookup.cc
